<resources>
    <string name="app_name">Messenger</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_registered">Not registered?</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_nickname">Enter your Nickname</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="what_i_do">What I do</string>
    <string name="sign_out">Sign Out</string>
    <string name="update">Update</string>
    <string name="last_sms">Last Sms</string>
    <string name="sender">Sender</string>
    <string name="date">Date</string>
    <string name="user">User</string>
    <string name="job">Job</string>
    <string name="message">Message</string>
</resources>