<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/friendNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/sender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/last_sms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/friendNickname"
        app:layout_constraintTop_toBottomOf="@+id/friendNickname" />

    <ImageView
        android:id="@+id/friendAvatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toStartOf="@+id/friendNickname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/friendNickname"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/lastSmsDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/friendNickname" />
</androidx.constraintlayout.widget.ConstraintLayout>